--- a/core/templates/core/rekam_medis.html
+++ b/core/templates/core/rekam_medis.html
@@ -1,7 +1,11 @@
 {% extends "core/base.html" %}
 {% load static %}
+{% load hashid_tags %}
 
 {% block title %}Rekam Medis{% endblock %}
+
+{% block extra_css %}
+{% endblock %}
 
 {% block content %}
 <!-- Header -->
@@ -100,16 +104,16 @@
                                 <td class="text-center align-middle">
                                     <a href="#" class="btn btn-primary btn-sm" data-toggle="dropdown" title="More" ><i class="fa-solid fa-ellipsis"></i></a>
                                     <div class="dropdown-menu">
-                                        <a class="dropdown-item d-flex align-items-center text-default" href="{% url 'detail_rekam_medis' item.id %}">
+                                        <a class="dropdown-item d-flex align-items-center text-default" href="{% url 'detail_rekam_medis' item.id|encode_hash %}">
                                             <i class="fa-solid fa-magnifying-glass text-primary"></i> 
                                             <span>Lihat Detail</span>
                                             
                                         </a>
-                                        <a class="dropdown-item d-flex align-items-center text-default" href="{% url 'edit_rekam_medis' item.id %}">
+                                        <a class="dropdown-item d-flex align-items-center text-default" href="{% url 'edit_rekam_medis' item.id|encode_hash %}">
                                             <i class="fa-solid fa-pencil text-primary"></i>
                                             <span>Edit</span>
                                         </a>
-                                        <a class="dropdown-item d-flex align-items-center text-default" href="{% url 'riwayat_rekam_medis_pasien' item.registrasi.pasien.id %}">
+                                        <a class="dropdown-item d-flex align-items-center text-default" href="{% url 'riwayat_rekam_medis_pasien' item.registrasi.pasien.id|encode_hash %}">
                                             <i class="fa-solid fa-clock text-primary"></i>
                                             <span>Lihat Riwayat</span>
                                         </a>
@@ -126,34 +130,13 @@
     <!-- End DataTable Daftar Rekam Medis Semua Pasien -->
 
     <!-- Footer -->
-    <footer class="footer pt-0">
-        <div class="row align-items-center justify-content-lg-between">
-            <div class="col-lg-6">
-                <div class="copyright text-center text-lg-left text-muted">
-                    &copy; 2025 <a href="#" class="font-weight-bold ml-1" target="_blank">Kelompok 9 RPL</a>
-                </div>
-            </div>
-            <div class="col-lg-6">
-                <ul class="nav nav-footer justify-content-center justify-content-lg-end">
-                    <li class="nav-item">
-                        <a href="#" class="nav-link" target="_blank">About Us</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#" class="nav-link" target="_blank">Blog</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#" class="nav-link" target="_blank">License</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </footer>
+    {% include 'partials/footer.html' %}
     <!-- End Footer -->
 </div>
 <!-- End Page content -->
 {% endblock %}
 
-{% block scripts %}
+{% block extra_js %}
 <script>
 $(document).ready(function () {
     console.log("Applying bootstrap-datepicker...");
