--- a/core/templates/core/rekam_medis_cetak.html
+++ b/core/templates/core/rekam_medis_cetak.html
@@ -70,7 +70,7 @@
     </div>
 
     <div class="section">
-        <strong>2. Pemeriksaan Fisik:</strong><br>
+        <strong>2. Pemeriksaan Fisik:</strong><br><br>
         Status Kesadaran: {{ rekam.get_status_kesadaran_display|default:"-" }}
 
         <table class="vital">
