--- a/core/templates/registration/base.html
+++ b/core/templates/registration/base.html
@@ -6,19 +6,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no">
-    <title>{% block title %}Login{% endblock %}</title>
-    <!-- Favicon -->
-    <link rel="icon" href="" type="image/png">
-    <!-- Fonts -->
+    <title>{% block title %}{% endblock %}</title>
+    <!-- Favicon dan Fonts -->
+    <link rel="icon" href="{% static 'assets/img/Group.svg' %}" type="image/svg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap">
-    <!-- Icons -->
+
+    <!-- CSS: Icons dan Argon Core -->
     <link rel="stylesheet" href="{% static 'assets/vendor/nucleo/css/nucleo.css' %}" type="text/css">
     <link rel="stylesheet" href="{% static 'assets/vendor/@fortawesome/fontawesome-free/css/all.min.css' %}" type="text/css">
-    <!-- CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet" href="{% static 'assets/css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'assets/css/argon.css' %}">
+
 </head>
 
 <body style="background-image: url('{% static 'assets/img/bg2.svg' %}'); background-size: cover; background-position: center; background-repeat: no-repeat; min-height: 100vh;">
@@ -26,7 +27,7 @@
     <nav id="navbar-main" class="navbar navbar-horizontal navbar-transparent navbar-main navbar-expand-lg navbar-light">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="{% static 'assets/img/brand/white.png' %}">
+                <img src="{% static 'assets/img/white.svg' %}">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-collapse" aria-controls="navbar-collapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -35,25 +36,13 @@
                 <hr class="d-lg-none" />
                 <ul class="navbar-nav align-items-lg-center ml-lg-auto">
                     <li class="nav-item">
-                        <a class="nav-link nav-link-icon" href="#" target="_blank" data-toggle="tooltip" data-original-title="Like us on Facebook">
-                            <i class="fab fa-facebook-square"></i>
-                            <span class="nav-link-inner--text d-lg-none">Facebook</span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link nav-link-icon" href="#" target="_blank" data-toggle="tooltip" data-original-title="Follow us on Instagram">
+                        <a class="nav-link nav-link-icon" href="https://www.instagram.com/muhgussap?igsh=ZjE4Zjdvc3A4OHY1&utm_source=qr" target="_blank" data-toggle="tooltip" data-original-title="Follow me on Instagram">
                             <i class="fab fa-instagram"></i>
                             <span class="nav-link-inner--text d-lg-none">Instagram</span>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link nav-link-icon" href="#" target="_blank" data-toggle="tooltip" data-original-title="Follow us on Twitter">
-                            <i class="fab fa-twitter-square"></i>
-                            <span class="nav-link-inner--text d-lg-none">Twitter</span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link nav-link-icon" href="#" target="_blank" data-toggle="tooltip" data-original-title="Star us on Github">
+                        <a class="nav-link nav-link-icon" href="https://github.com/muhgussap17" target="_blank" data-toggle="tooltip" data-original-title="Star me on Github">
                             <i class="fab fa-github"></i>
                             <span class="nav-link-inner--text d-lg-none">Github</span>
                         </a>
@@ -75,7 +64,7 @@
             <div class="row align-items-center justify-content-xl-between">
                 <div class="col-xl-6">
                     <div class="copyright text-center text-xl-left text-muted">
-                        &copy; 2025 <a href="#" class="font-weight-bold text-muted" target="_blank">Kelompok 9</a>
+                        &copy; 2025 <a href="https://www.instagram.com/muhgussap?igsh=ZjE4Zjdvc3A4OHY1&utm_source=qr" class="font-weight-bold text-muted" target="_blank">muhgussap</a>
                     </div>
                 </div>
                 <div class="col-xl-6">
@@ -108,5 +97,8 @@
     <script src="{% static 'assets/vendor/chart.js/dist/Chart.extension.js' %}"></script>
     <!-- Argon JS -->
     <script src="{% static 'assets/js/argon.js' %}?v=1.2.1"></script>
+    
+    {% block extra_js %}
+    {% endblock %}
 </body>
 </html>
