--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -7,29 +7,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no">
     <title>{% block title %}{% endblock %}</title>
-    <!-- Favicon -->
+    <!-- Favicon dan Fonts-->
     <link rel="icon" href="{% static 'assets/img/Group.svg' %}" type="image/svg">
-    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap">
-    <!-- Icons -->
+
+    <!-- CSS: Icons dan Argon Core -->
     <link rel="stylesheet" href="{% static 'assets/vendor/nucleo/css/nucleo.css' %}" type="text/css">
     <link rel="stylesheet" href="{% static 'assets/vendor/@fortawesome/fontawesome-free/css/all.min.css' %}" type="text/css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-
-    <!-- CSS -->
     <link rel="stylesheet" href="{% static 'assets/css/bootstrap.min.css' %}">
-    <link rel="stylesheet" href="{% static 'assets/css/argon.css' %}">
-    <!-- JS -->
+    
+    <!-- CSS: DataTables -->
     <link rel="stylesheet" href="{% static 'assets/vendor/datatables.net-buttons-bs4/css/buttons.bootstrap4.min.css' %}">
     <link rel="stylesheet" href="{% static 'assets/vendor/datatables.net-bs4/css/dataTables.bootstrap4.min.css' %}">
     <link rel="stylesheet" href="{% static 'assets/vendor/datatables.net-select-bs4/css/select.bootstrap4.min.css' %}">
+    
+    <!-- CSS: DataTables -->
     <link rel="stylesheet" href="{% static 'assets/vendor/select2/dist/css/select2.min.css' %}">
     <link rel="stylesheet" href="{% static 'assets/vendor/animate.css/animate.min.css' %}">
     <link rel="stylesheet" href="{% static 'assets/vendor/sweetalert2/dist/sweetalert2.min.css' %}">
-    <!-- <link rel="stylesheet" href="{% static 'assets/vendor/quill/dist/quill.core.css' %}"> -->
+    
+    <link rel="stylesheet" href="{% static 'assets/css/argon.css' %}">
+    
+    {% block extra_css %}
+    {% endblock %}
 
+    <style>
+        .django-ckeditor-widget{
+        width: 100%;
+        }
+    </style>  
 
     <style>
         .nav-tabs .nav-link {
@@ -201,24 +210,23 @@
     </div>
     <!-- End Content -->
     
+    <!-- Notifikasi -->
     {% include 'partials/toast.html' %}
 
-    <script>
-    $(document).ready(function () {
-        $('.toast').toast('show');
-    });
-    </script>
 
     <!-- Argon Scripts -->
-    <!-- Core -->
+    <!-- JS: Core JS -->
     <script src="{% static 'assets/vendor/jquery/dist/jquery.min.js' %}"></script>
     <script src="{% static 'assets/vendor/bootstrap/dist/js/bootstrap.bundle.min.js' %}"></script>
     <script src="{% static 'assets/vendor/js-cookie/js.cookie.js' %}"></script>
     <script src="{% static 'assets/vendor/jquery.scrollbar/jquery.scrollbar.min.js' %}"></script>
     <script src="{% static 'assets/vendor/jquery-scroll-lock/dist/jquery-scrollLock.min.js' %}"></script>
-    <!-- Optional JS -->
+
+    <!-- JS: Chart -->
     <script src="{% static 'assets/vendor/chart.js/dist/Chart.min.js' %}"></script>
     <script src="{% static 'assets/vendor/chart.js/dist/Chart.extension.js' %}"></script>
+    
+    <!-- JS: DataTables -->
     <script src="{% static 'assets/vendor/datatables.net/js/jquery.dataTables.min.js' %}"></script>
     <script src="{% static 'assets/vendor/datatables.net-bs4/js/dataTables.bootstrap4.min.js' %}"></script>
     <script src="{% static 'assets/vendor/datatables.net-buttons/js/dataTables.buttons.min.js' %}"></script>
@@ -227,20 +235,31 @@
     <script src="{% static 'assets/vendor/datatables.net-buttons/js/buttons.flash.min.js' %}"></script>
     <script src="{% static 'assets/vendor/datatables.net-buttons/js/buttons.print.min.js' %}"></script>
     <script src="{% static 'assets/vendor/datatables.net-select/js/dataTables.select.min.js' %}"></script>
+    
+    <!-- JS: Optional -->
     <script src="{% static 'assets/vendor/select2/dist/js/select2.min.js' %}"></script>
     <script src="{% static 'assets/vendor/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js' %}"></script>
     <script src="{% static 'assets/vendor/moment.min.js' %}"></script>
     <script src="{% static 'assets/vendor/nouislider/distribute/nouislider.min.js' %}"></script>
-    <script src="{% static 'assets/vendor/quill/dist/quill.min.js' %}"></script>
     <script src="{% static 'assets/vendor/dropzone/dist/min/dropzone.min.js' %}"></script>
     <script src="{% static 'assets/vendor/bootstrap-tagsinput/dist/bootstrap-tagsinput.min.js' %}"></script>
+    
     <script src="{% static 'assets/vendor/sweetalert2/dist/sweetalert2.min.js' %}"></script>
     <script src="{% static 'assets/vendor/bootstrap-notify/bootstrap-notify.min.js' %}"></script>
-    <!-- Argon JS -->
-    <script src="{% static 'assets/js/argon.js' %}"></script>
+    
+    
+    <script>
+        $(document).ready(function () {
+            $('.toast').toast('show');
+        });
+        </script>
+
+    {% block extra_js %}
+    {% endblock %}
+
+    <!-- JS: Argon Core -->
+    <script src="{% static 'assets/js/argon.js' %}?v=1.2.1"></script>
     <script src="{% static 'assets/js/demo.min.js' %}"></script>
 
-    {% block scripts %}
-    {% endblock %}
 </body>
 </html>
