--- a/core/templates/core/pasien.html
+++ b/core/templates/core/pasien.html
@@ -1,7 +1,11 @@
 {% extends "core/base.html" %}
 {% load static %}
+{% load hashid_tags %}
 
 {% block title %}Pasien{% endblock %}
+
+{% block extra_css %}
+{% endblock %}
 
 {% block content %}
 <!-- Header -->
@@ -20,18 +24,18 @@
                                 <a href="{% url 'dashboard' %}"><i class="fas fa-home text-default"></i></a>
                             </li>
                             {% if breadcrumbs %}
-                            {% for item in breadcrumbs %}
+                                {% for item in breadcrumbs %}
                                     {% if forloop.last %}
                                         <li class="breadcrumb-item text-muted active" aria-current="page">{{ item.title }}</li>
-                                        {% else %}
+                                    {% else %}
                                         <li class="breadcrumb-item">
                                             <a href="{{ item.url }}" class="text-primary">{{ item.title }}</a>
                                         </li>
-                                        {% endif %}
-                                        {% endfor %}
-                                        {% else %}
-                                        <li class="breadcrumb-item active" aria-current="page">{{ page_title }}</li>
-                                        {% endif %}
+                                    {% endif %}
+                                {% endfor %}
+                            {% else %}
+                                <li class="breadcrumb-item active" aria-current="page">{{ page_title }}</li>
+                            {% endif %}
                         </ol>
                     </nav>
                 </div>
@@ -82,7 +86,7 @@
                         <tbody>
                             {% for pasien in pasien_list %}
                             <tr>
-                                <td class="align-middle"><a class="text-default" href="{% url 'detail_pasien' pasien.id %}">{{ pasien.nama_lengkap }}</a></td>
+                                <td class="align-middle"><a class="text-default" href="{% url 'detail_pasien' pasien.id|encode_hash %}">{{ pasien.nama_lengkap }}</a></td>
                                 <td class="align-middle">{{ pasien.no_rm }}</td>
                                 <td class="align-middle">{{ pasien.tanggal_lahir|date:"d M Y" }}</td>
                                 <td class="align-middle">{{ pasien.nik }}</td>
@@ -98,19 +102,19 @@
                                 <td class="text-center align-middle">
                                     <a href="#" class="btn btn-primary btn-sm" data-toggle="dropdown" title="More" ><i class="fa-solid fa-ellipsis"></i></a>
                                     <div class="dropdown-menu">
-                                        <a class="dropdown-item d-flex align-items-center text-default" href="{% url 'detail_pasien' pasien.id %}">
+                                        <a class="dropdown-item d-flex align-items-center text-default" href="{% url 'detail_pasien' pasien.id|encode_hash %}">
                                             <i class="fa-solid fa-magnifying-glass text-primary"></i> 
                                             <span>Lihat Detail</span>
                                         </a>
-                                        <a class="dropdown-item d-flex align-items-center text-default" href="{% url 'edit_pasien' pasien.id %}">
+                                        <a class="dropdown-item d-flex align-items-center text-default" href="{% url 'edit_pasien' pasien.id|encode_hash %}">
                                             <i class="fa-solid fa-pencil text-primary"></i>
                                             <span>Edit</span>
                                         </a>
-                                        <a class="dropdown-item d-flex align-items-center text-default" href="{% url 'riwayat_rekam_medis_pasien' pasien.id %}" >
+                                        <a class="dropdown-item d-flex align-items-center text-default" href="{% url 'riwayat_rekam_medis_pasien' pasien.id|encode_hash %}" >
                                             <i class="fa-solid fa-clock text-primary"></i>
                                             <span>Riwayat Rekam Medis</span>
                                         </a>
-                                        <a class="dropdown-item d-flex align-items-center text-default" href="{% url 'buat_registrasi_pasien' pasien.id %}">
+                                        <a class="dropdown-item d-flex align-items-center text-default" href="{% url 'buat_registrasi_pasien' pasien.id|encode_hash %}">
                                             <i class="fa-solid fa-file-pen text-primary"></i> 
                                             <span>Buat Registrasi</span>
                                         </a>
@@ -119,7 +123,7 @@
                                             <span>Unduh Kartu Pasien</span>
                                         </a>
                                         <div class="dropdown-divider"></div>
-                                        <a class="dropdown-item d-flex align-items-center text-default" href="{% url 'nonaktifkan_pasien' pasien.id %}">
+                                        <a class="dropdown-item d-flex align-items-center text-default" href="{% url 'nonaktifkan_pasien' pasien.id|encode_hash %}">
                                             <i class="fa-solid fa-ban text-danger"></i> 
                                             <span>Nonaktifkan</span>
                                         </a>
@@ -137,29 +141,11 @@
     <!-- End Row 2 -->
 
     <!-- Footer -->
-    <footer class="footer pt-0">
-        <div class="row align-items-center justify-content-lg-between">
-            <div class="col-lg-6">
-                <div class="copyright text-center text-lg-left text-muted">
-                    &copy; 2025 <a href="#" class="font-weight-bold ml-1" target="_blank">Kelompok 9 RPL</a>
-                </div>
-            </div>
-            <div class="col-lg-6">
-                <ul class="nav nav-footer justify-content-center justify-content-lg-end">
-                    <li class="nav-item">
-                        <a href="#" class="nav-link" target="_blank">About Us</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#" class="nav-link" target="_blank">Blog</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#" class="nav-link" target="_blank">License</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </footer>
+    {% include 'partials/footer.html' %}
     <!-- End Footer -->
 </div>
 <!-- End Page content -->
+{% endblock %}
+
+{% block extra_js %}
 {% endblock %}
