--- a/core/templates/core/pasien_detail.html
+++ b/core/templates/core/pasien_detail.html
@@ -1,7 +1,11 @@
 {% extends "core/base.html" %}
 {% load static %}
+{% load hashid_tags %}
 
 {% block title %}{{ pasien.nama_lengkap }} | Detail{% endblock %}
+
+{% block extra_css %}
+{% endblock %}
 
 {% block content %}
 <!-- Header -->
@@ -137,12 +141,12 @@
                 <div class="card-header">
                     <div class="row">
                         <div class="col-12">
-                            <a href="{% url 'edit_pasien' pasien.id %}" class="btn btn-primary btn-block">Edit Pasien</a>
+                            <a href="{% url 'edit_pasien' pasien.id|encode_hash %}" class="btn btn-primary btn-block">Edit Pasien</a>
                         </div>
                     </div>
                     <div class="row mt-2">
                         <div class="col-12">
-                            <a href="{% url 'riwayat_rekam_medis_pasien' pasien.id %}" class="btn btn-outline-primary btn-block">Riwayat Rekam Medis</a>
+                            <a href="{% url 'riwayat_rekam_medis_pasien' pasien.id|encode_hash %}" class="btn btn-outline-primary btn-block">Riwayat Rekam Medis</a>
                         </div>
                     </div>
                     <div class="row mt-2">
@@ -154,7 +158,7 @@
                 <div class="card-body">
                     <div class="row">
                         <div class="col-12">
-                            <a href="{% url 'buat_registrasi_pasien' pasien.id %}" class="btn btn-outline-primary btn-block">Buat Registrasi</a>
+                            <a href="{% url 'buat_registrasi_pasien' pasien.id|encode_hash %}" class="btn btn-outline-primary btn-block">Buat Registrasi</a>
                         </div>
                     </div>
                 </div>
@@ -177,29 +181,11 @@
     <!-- End Main Row -->
 
     <!-- Footer -->
-    <footer class="footer pt-0">
-        <div class="row align-items-center justify-content-lg-between">
-            <div class="col-lg-6">
-                <div class="copyright text-center text-lg-left text-muted">
-                    &copy; 2025 <a href="#" class="font-weight-bold ml-1" target="_blank">Kelompok 9 RPL</a>
-                </div>
-            </div>
-            <div class="col-lg-6">
-                <ul class="nav nav-footer justify-content-center justify-content-lg-end">
-                    <li class="nav-item">
-                        <a href="#" class="nav-link" target="_blank">About Us</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#" class="nav-link" target="_blank">Blog</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#" class="nav-link" target="_blank">License</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </footer>
+    {% include 'partials/footer.html' %}
     <!-- End Footer -->
 </div>
 <!-- End Page content -->
+{% endblock %}
+
+{% block extra_js %}
 {% endblock %}
